--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+body {
+  font-family: 'Roboto', sans-serif;
+  background-image: url(./images/lo-fi.gif);
+  background-size: 100%;
+  background-position: 80% 25%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.maintenance {
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.616);
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 500px;
+  justify-content: space-around;
+  left:0;right: 0;
+  margin: auto;
+  max-width: 80%;
+  max-height: 50%;
+  padding: 50px;
+  position: absolute;
+  text-align: center;
+  top:0;bottom: 0;
+  width: 1400px;
 }
 
-.App-link {
-  color: #61dafb;
+.patrick-working {
+  height: 300px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.subtitle {
+  font-size: 150%;
 }
