--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,33 +1,16 @@
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
 body {
-  font-family: 'Roboto', sans-serif;
-  background-image: url(../images/lo-fi.gif);
-  background-size: 100%;
-  background-position: 80% 25%;
+  height: 100%;
+  background: rgb(2,0,36);
+  background: linear-gradient(157deg, rgba(2,0,36,1) 0%, rgba(201,0,255,1) 0%, rgba(0,212,255,1) 100%);
+  margin-bottom: 0;
 }
 
-.maintenance {
-  align-items: center;
-  background-color: rgba(255, 255, 255, 0.616);
-  border-radius: 15px;
-  display: flex;
-  flex-direction: column;
-  height: 500px;
-  justify-content: space-around;
-  left:0;right: 0;
-  margin: auto;
-  max-width: 80%;
-  max-height: 50%;
-  padding: 50px;
-  position: absolute;
-  text-align: center;
-  top:0;bottom: 0;
-  width: 1400px;
-}
-
-.patrick-working {
-  height: 300px;
-}
-
-.subtitle {
-  font-size: 150%;
+.header-bg {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
 }
